kube/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment
  labels:
    app: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: jp.icr.io/jason-05192025/node-hello-world:10
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
